# lp-foundations

./: README.md  docker-compose.yml  dockerfile  makefile  pyproject.toml
.github/workflows/: ci.YAML
life_expectancy/: cleaning.py  region.py
life_expectancy/data/: pt_life_expectancy.csv
life_expectancy/tests/: conftest.py  test_cleaning.py  test_pyproject.py
